samples/_failures_safe/1761786271_eeb79e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c33fe9e3.c:181: error: expected ‘;’, ‘,’ or ‘)’ at end of input
